--- a/app/Resources/views/membres/editProfil.html.twig
+++ b/app/Resources/views/membres/editProfil.html.twig
@@ -24,17 +24,9 @@
             <div>
                 <h4>Profil:</h4>
                 <div id="editProfil" class="col-lg-6 profil">
-                    <input class="col-lg-9"placeholder="Nom"/>
-                    <input class="col-lg-9"placeholder="Prenom"/>
-                    <input class="col-lg-9"placeholder="Pseudo"/>
-                    <a class="col-lg-9" href="">changer le mot de passe</a>
-                    <input class="col-lg-12"placeholder="Adresse"/>
-                    <input class="col-lg-9"placeholder="Ville"/>
-                    <input class="col-lg-9"placeholder="Code Postal"/>
-                    <div class="ijk col-lg-9">
-                        <a href="">URL site</a>
-                        <input class="droite" type="submit" value="edit"/>
-                    </div>
+                    {{form_start(edit_form)}}
+                    <input type="submit" class="btn btn-info btn-sm text-position col-md-offset-0 col-md-1 colorbouttton pull-right"value="Edit" />
+                    {{form_end(edit_form)}}
                 </div>
                 <img class="profil-img col-lg-4"atl="fk_image" src="{{ asset('image/avatar.png') }}"/>
                 <input class="col-lg-offset-10 col-lg-2" type="submit" value="Actualiser"/>
