--- a/app/Resources/views/membres/carnetDeBord.html.twig
+++ b/app/Resources/views/membres/carnetDeBord.html.twig
@@ -24,13 +24,13 @@
             <div>
                 <h4>Profil:</h4>
                 <div id="editProfil" class="col-lg-6 profil">
-                    <input id="nom" class="col-lg-9"placeholder="Nom"/>
-                    <input id="prenom" class="col-lg-9"placeholder="Prenom"/>
-                    <input id="pseudo" class="col-lg-9"placeholder="Pseudo"/>
+                    <input id="nom" class="col-lg-9"/>
+                    <input id="prenom" class="col-lg-9"/>
+                    <input id="pseudo" class="col-lg-9"/>
                     <a class="col-lg-9" href="">changer le mot de passe</a>
-                    <input id="adresse" class="col-lg-12"placeholder="Adresse"/>
-                    <input id="ville" class="col-lg-9"placeholder="Ville"/>
-                    <input id="codePostal" class="col-lg-9"placeholder="Code Postal"/>
+                    <input id="adresse" class="col-lg-12"/>
+                    <input id="ville" class="col-lg-9"/>
+                    <input id="codePostal" class="col-lg-9"/>
                     <div class="ijk col-lg-9">
                         <a href="">URL site</a>
                         <input id="validEditProfil"class="droite" type="submit" value="edit"/>
