--- a/app/Resources/views/site/home.html.twig
+++ b/app/Resources/views/site/home.html.twig
@@ -80,14 +80,14 @@
                             </ul>
                         {% endif %}
                         <a class="col-lg-offset-6 text-center" href=""/><img class="text-center hide" src="{{asset('image/up.png')}}"/></a>
-                        {#                        {% for activity in activities %}
+                                                {% for activity in activities %}
                                                     <div class="postit">
                                                         <p>{{activity.datetime|date('d/m/Y')}}</p>
                                                         <h4 class="text-center">{{activity.title}}</h4>
-                                                        <p class="text-justify">{{activity.description}}</p>
-                                                        <a class="col-lg-offset-9 col-lg-3" href='{{path('forum',{'id':activity.id })}}'>détails</a>
+                                                        <p class="text-justify">{{activity.text}}</p>
+{#                                                        <a class="col-lg-offset-9 col-lg-3" href='{{path('projets',{'id':activity.id })}}'>détails</a>#}
                                                     </div>
-                                                {% endfor %} #}
+                                                {% endfor %} 
                         <a class="col-lg-offset-6 text-center" href=""/><img class="text-center" src="{{asset('image/down.png')}}"/></a>
                     </div>
                 </div>
